--- a/index.html
+++ b/index.html
@@ -3,14 +3,66 @@
 <head>
 	<meta charset="UTF-8">
 	<title>k18-blog-plus</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/module-grid.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	
 	<header class="menu">
-		<img src="images/header1.png" alt="" class="head-image">
+
+		<section class="modules">
+			<div class="module-grid">
+				<div class="module-grid__cell-2">
+					<div class="module-header">
+						<span class="logo-img"><img src="images/logo.png" alt="" class="logo"></span>
+						<span class="logo-text">blog+</span>
+					</div>
+				</div>
+				<div class="module-grid__cell-8">
+					<div class="module-header">
+						
+						<ul class="top-menu">
+							<li><a href="#">рубрики</a>
+								<ul class="sub-menu">
+									<li><a href="#">Lorem ipsum 1</a></li>
+									<li><a href="#">Lorem ipsum 2</a></li>
+									<li><a href="#">Lorem ipsum 3</a></li>
+									<li><a href="#">Lorem ipsum 4</a></li>
+								</ul>
+							</li>
+							<li><a href="#">галерея</a>
+								<ul class="sub-menu">
+									<li><a href="#">Lorem ipsum 1</a></li>
+									<li><a href="#">Lorem ipsum 2</a></li>
+									<li><a href="#">Lorem ipsum 3</a></li>
+									<li><a href="#">Lorem ipsum 4</a></li>
+								</ul>
+							</li>
+							<li><a href="#">контакты</a>
+								<ul class="sub-menu">
+									<li><a href="#">Lorem ipsum 1</a></li>
+									<li><a href="#">Lorem ipsum 2</a></li>
+									<li><a href="#">Lorem ipsum 3</a></li>
+									<li><a href="#">Lorem ipsum 4</a></li>
+								</ul>
+							</li>
+						</ul>
+
+					</div>
+				</div>
+				<div class="module-grid__cell-2">
+					<div class="module-header">
+						<div class="button-login">
+
+							<input type="button" name="login" class="login" value="вход">
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</header>
 
 	<main class="content">
@@ -20,49 +72,57 @@
 			<div class="section-name-border"></div>
 
 			<div class="module-grid">
-
 				<div class="module-grid__cell-11">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-1">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid">
 				<div class="module-grid__cell-10">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-2">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid">
 				<div class="module-grid__cell-9">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-3">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid">
 				<div class="module-grid__cell-8">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-4">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid">
 				<div class="module-grid__cell-7">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-5">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid">
 				<div class="module-grid__cell-6">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-6">
 					<div class="module"></div>
 				</div>
-
 			</div>
 		</section>
 
@@ -77,35 +137,45 @@
 				<div class="module-grid__cell-1">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid module-grid--gutters">
 				<div class="module-grid__cell-10">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-2">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid module-grid--gutters">
 				<div class="module-grid__cell-9">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-3">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid module-grid--gutters">
 				<div class="module-grid__cell-8">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-4">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid module-grid--gutters">
 				<div class="module-grid__cell-7">
 					<div class="module"></div>
 				</div>
 				<div class="module-grid__cell-5">
 					<div class="module"></div>
 				</div>
+			</div>
 
+			<div class="module-grid module-grid--gutters">
 				<div class="module-grid__cell-6">
 					<div class="module"></div>
 				</div>
@@ -120,16 +190,47 @@
 			
 			<h3 class="section-name">Отзывы посетителей нашего сайта</h3>
 			<div class="section-name-border"></div>
+			
+			<div class="user-info">
+				<div class="module-grid">
+					<div class="module-grid__cell-2">
+						<div class="module-photo"><img src="images/user-photo.png" alt=""></div>
+					</div>
+					<div class="module-grid__cell-10">
+						<div class="module-text">
+							<b class="user-name">Иванов Иван</b><span class="module-text-date">11 февраля 2016</span>
+							<p class="text">Говоря о деталях, для того чтобы товар бросался в глаза и его хотелось купить, с помощью акцентного освещения получается сделать четкие грани, что обеспечивает контрастность в освещении. Также с помощью профессионального светотехнического оборудования можно варьировать оттенок белого света. Например, для каждой отдельной коллекции необходимо свое восприятие, а также естественное освещение, что повышает уровень интереса клиентов.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="user-info">
+				<div class="module-grid">
+					<div class="module-grid__cell-2">
+						<div class="module-photo"><img src="images/user-photo.png" alt=""></div>
+					</div>
+					<div class="module-grid__cell-10">
+						<div class="module-text">
+							<b class="user-name">Иванов Иван</b><span class="module-text-date">11 февраля 2016</span>
+							<p class="text">Говоря о деталях, для того чтобы товар бросался в глаза и его хотелось купить, с помощью акцентного освещения получается сделать четкие грани, что обеспечивает контрастность в освещении. Также с помощью профессионального светотехнического оборудования можно варьировать оттенок белого света. Например, для каждой отдельной коллекции необходимо свое восприятие, а также естественное освещение, что повышает уровень интереса клиентов.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
-			<div class="module-grid">
-				<div class="module-grid__cell-12">
-					<div class="module-photo"><img src="images/Group-1.png" alt=""></div>
-				</div>
-				<div class="module-grid__cell-12">
-					<div class="module-photo"><img src="images/Group-1.png" alt=""></div>
-				</div>
-				<div class="module-grid__cell-12">
-					<div class="module-photo"><img src="images/Group-1.png" alt=""></div>
+
+			<div class="user-info">
+				<div class="module-grid">
+					<div class="module-grid__cell-2">
+						<div class="module-photo"><img src="images/user-photo.png" alt=""></div>
+					</div>
+					<div class="module-grid__cell-10">
+						<div class="module-text">
+							<b class="user-name">Иванов Иван</b><span class="module-text-date">11 февраля 2016</span>
+							<p class="text">Говоря о деталях, для того чтобы товар бросался в глаза и его хотелось купить, с помощью акцентного освещения получается сделать четкие грани, что обеспечивает контрастность в освещении. Также с помощью профессионального светотехнического оборудования можно варьировать оттенок белого света. Например, для каждой отдельной коллекции необходимо свое восприятие, а также естественное освещение, что повышает уровень интереса клиентов.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -142,30 +243,129 @@
 
 			<div class="module-grid module-grid--gutters">
 				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
 				</div>
 				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
 				</div>
 				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
 				</div>
 				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
-				</div>
-				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
-				</div>
-				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
-				</div>
-				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
-				</div>
-				<div class="module-grid__cell-3">
-					<div class="item"><img src="images/Rectangle-31.png" alt=""></div>
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
 				</div>
 			</div>
+
+			<div class="module-grid module-grid--gutters">
+				<div class="module-grid__cell-3">
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
+				</div>
+				<div class="module-grid__cell-3">
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
+				</div>
+				<div class="module-grid__cell-3">
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
+				</div>
+				<div class="module-grid__cell-3">
+					<div class="item">
+						<img src="images/item.png" alt="" class="item-photo">
+						<p class="item-text">Lorem ipsum dolor sit amet, consectetur. <br>
+						Lorem ipsum dolor sit amet,</p>
+					</div>
+				</div>
+			</div>
+
+		</section>
+
+		<section class="modules">
+			
+			<h3 class="section-name">Элементы формы</h3>
+			<div class="section-name-border"></div>
+
+			<form action="url" method="post">
+				
+				<div class="module-grid module-grid--gutters">
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" placeholder="Input text placeholder" class="input-text">	
+						</div>
+					</div>
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" value="Input value" class="input-text">
+						</div>
+					</div>
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" placeholder="Focus state" class="input-text">
+						</div>
+					</div>
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" value="Focus state input value" class="input-text">
+						</div>
+					</div>
+				</div>
+
+				<div class="module-grid module-grid--gutters">
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" placeholder="Input text placeholder" class="input-text">	
+						</div>
+					</div>
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" value="Input value" class="input-text">
+						</div>
+					</div>
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" placeholder="Focus state" class="input-text">
+						</div>
+					</div>
+					<div class="module-grid__cell-3">
+						<div class="inputs">
+							<div class="inputs-label">Lorem ipsum</div>
+							<input type="text" name="text" value="Focus state input value" class="input-text">
+						</div>
+					</div>
+				</div>
+			</form>
 
 		</section>
 	</main>
